Fixed off-center profile image

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -213,9 +213,9 @@ main {
 }
 
 .profile h1 {
-   font-size: 2.3em;
-   margin-top: 0;
-   margin-bottom: 0;
+    font-size: 2.3em;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .profile__portrait {
@@ -598,8 +598,8 @@ textarea {
     }
 
     .profile__portrait {
-       float: none;
-        margin: 0 auto;
+        float: none;
+        margin: 0;
     }
 
     .about {
@@ -607,7 +607,7 @@ textarea {
     }
 
     .about div {
-        max-height: 300px;
+        max-height: 250px;
     }
 
     .contact {
