--- a/css/styles.css
+++ b/css/styles.css
@@ -176,9 +176,9 @@
  }
 
  .profile h1 {
-    font-size: 2.3em;
-    margin-top: 0;
-    margin-bottom: 0;
+     font-size: 2.3em;
+     margin-top: 0;
+     margin-bottom: 0;
  }
 
  .profile__portrait {
@@ -441,8 +441,8 @@
      }
 
      .profile__portrait {
-        float: none;
-         margin: 0 auto;
+         float: none;
+         margin: 0;
      }
 
      .about {
@@ -450,7 +450,7 @@
      }
 
      .about div {
-         max-height: 300px;
+         max-height: 250px;
      }
 
      .contact {
